<resources>
    <string name="app_name">ES</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about">关于</string>
    <string name="add_record">添加记录</string>
    <string name="record_detail">记录详情</string>
    <string name="edit_record">编辑记录</string>

    <string name="title_activity_add_record">添加记录</string>
    <string name="txt_comment">备注...</string>

    <string name="title_activity_settings">设置</string>

    <!-- ：lijinfeng.ljf@gmail.com\n个人网站：jinfengli.github.io-->
    <string name="contract">联系方式：lijinfeng_ljf@foxmail.com</string>
    <string name="copyright">Copyright(C) Kingfeng All Rights Reserved</string>


    <string name="start_detail_date_time">开始时间：%1$s</string>
    <string name="sleep_detail_date_time">结束时间：%1$s</string>
    <string name="record_status">记录状态：%1$s</string>
    <string name="sleep_detail_record_comment">备注：%1$s</string>
    <string name="sleep_detail_total_time">睡眠总时间：%1$s</string>
    <string name="sleep_detail_status">睡眠状态：</string>

    <string name="register_time">注册时间：%1$s</string>

    <string name="setting_arrow">setting_arrow</string>

    <string name="slogan1">记录作息时间\n保持精力充沛</string>
    <string name="title_activity_record_detail">记录详情</string>

    <string name="confirm_add_this_record">确定添加该条记录？</string>
    <string name="comment_should_not_null">备注内容不能为空</string>

    <string name="switch_theme">切换主题</string>
    <string name="txt_feedback">反馈</string>
    <string name="check_new_version">版本更新 v%1$s</string>
    <string name="backup">备份</string>
    <string name="about">关于</string>

    <string name="open">open</string>
    <string name="close">close</string>

    <!-- common-->
    <string name="network_error">网络错误，请检查网络连接</string>
    <string name="normal">正常</string>
    <string name="abnormal">异常</string>
    <string name="tips">提示</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="yes">是</string>
    <string name="no">否</string>

    <string name="another_press_to_exit">再按一次退出程序</string>


    <string name="find_accout_or_pwd">找回帐号或密码</string>
    <string name="email_should_not_null">邮箱不能为空</string>
    <string name="email_format_error">邮件格式不正确</string>
    <string name="send_email_success">邮件发送成功，请检查邮件并重置密码</string>
    <string name="send_email_fail">邮件发送失败，请检查邮件地址</string>

    <!--login-->
    <string name="logining">登录中...</string>
    <string name="username_should_not_null">用户名不能为空</string>
    <string name="pwd_should_not_null">密码不能为空</string>
    <string name="login_success">登录成功</string>
    <string name="login_error">登录失败,请确认用户名和密码后重试.</string>
    <string name="network_unconnect">网络不可用，请检查</string>

    <!-- register-->
    <string name="user_register">注册</string>
    <string name="please_check_input">请检查输入项</string>
    <string name="twice_pwd_not_equal">两次输入密码不一致</string>
    <string name="please_waiting">请稍后...</string>
    <string name="error_register_username_repeat">该用户名已被占用，请选择其他的用户名</string>
    <string name="email_has_registered">邮箱已被占用，请通过找回密码进行后续操作</string>

    <!-- MainActivity -->
    <string name="sure_to_delete">确定删除吗？</string>
    <string name="confirm_to_quit">退出后需重新登陆，确定退出？</string>
    <string name="modify">修改</string>

</resources>
