<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.lijinfeng.eses.activity.RecordDetailActivity">

    <include layout="@layout/custom_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_detail_startDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_detail_date_time" />

        <TextView
            android:id="@+id/tv_detail_sleepDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sleep_detail_record_comment" />

        <TextView
            android:id="@+id/tv_detail_daily_sleep_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sleep_detail_total_time" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/sleep_detail_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_record_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>


        <TextView
            android:id="@+id/tv_detail_sleep_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sleep_detail_record_comment" />


    </LinearLayout>

</LinearLayout>
