<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0EFF4"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.example.lijinfeng.eses.activity.SettingsActivity">

    <include layout="@layout/custom_toolbar" />

    <TextView
        android:id="@+id/tv_set_theme"
        style="@style/common_item_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_theme" />

    <TextView
        android:id="@+id/tv_feedback"
        style="@style/common_item_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_feedback" />

    <TextView
        android:id="@+id/tv_check_new_version"
        style="@style/common_item_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_new_version" />

    <TextView
        android:id="@+id/tv_backup"
        style="@style/common_item_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="备份" />


</LinearLayout>
